# dependabot-batch-review

./: .gitignore  CLAUDE.md  LICENSE  Makefile  Pipfile  README.md  alerts.sh  dependabot-dashboard.html  dependabot-report.xlsx  hypothesis_dependabot_alerts_tracker_example.xlsx  pyproject.toml  review.py  review.sh  serve.sh  test.md  test.xlsx
.github/workflows/: alerts.yml  ci.yml
dependabot_batch_review/: __main__.py  alerts.py  github_client.py  review.py  server.py  slack.py
