[tool.poetry]
name = "dependabot-batch-review"
version = "0.1.0"
description = "Review Dependabot PRs across an organization"
authors = ["Robert Knight <robertknight@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
blessings = "^1.7"
beautifulsoup4 = "^4.12.3"
types-beautifulsoup4 = "^4.12.0.20240106"
ruff = "^0.2.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-requests = "^2.31.0.20240218"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
